hard-gists/1045108/run.log
=== Docker Run Log for 1045108 ===
Started at: Mi 29. Okt 11:46:59 CET 2025

[2025-10-29 11:46:59] START: Running container for 1045108
[2025-10-29 11:46:59] SUCCESS: Container 28bc33b246b1578b7d85c21a6a3c5dd28c48d33be11c6c5b159d93bb63d428bd started for 1045108
=== Container logs for 1045108 ===
  File "/snippet.py", line 13
    print kwargs
    ^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1045108 ===
[2025-10-29 11:47:01] INFO: Container 28bc33b246b1578b7d85c21a6a3c5dd28c48d33be11c6c5b159d93bb63d428bd has stopped
